envoy-config/envoy.yaml
admin:
  access_log_path: /dev/null
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9000
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address:
        address: 172.17.0.3
        port_value: 8080
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          codec_type: AUTO
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match:
                  prefix: "/order"
                route:
                  cluster: order-service
          http_filters:
          - name: envoy.filters.http.ext_authz
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
              with_request_body:
                max_request_bytes: 8192
                allow_partial_message: true
              failure_mode_allow: false
              grpc_service:
                google_grpc:
                  target_uri: 192.168.163.1:9191
                  stat_prefix: streams_total
                timeout: 0.5s
              transport_api_version: V3
          - name: envoy.filters.http.router
            typed_config:
              "@type" : type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
    - name: order-service
      connect_timeout: 0.25s
      type: strict_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: order-service
        endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: 172.17.0.2
                  port_value: 9901
